fix: horizontal scroll

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -15,5 +15,6 @@
     font-size: 14px;
     line-height: 17px;
     margin: auto;
+    max-width: 220px;
   }
 }
