--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -17,5 +17,6 @@
     font-size: 27px;
     line-height: 33px;
     padding-left: 28px;
+    max-width: 220px;
   }
 }
